@@ -7,17 +7,16 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.Random;
-import java.util.logging.FileHandler;
 
-import org.junit.Ignore;
-import org.junit.jupiter.api.AfterAll;
+
+
+
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeAll;
+
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
+
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.io.TempDir;
+
 
 import InOut.FileReaderService;
 import InOut.FileWriterService;
@@ -47,37 +46,41 @@ class MovieTest {
     @Test
 
     void testMoviesHappyScenario() throws Exception {
-        MovieFile.write("Avatar,A156\r\n"
-                + "SciFi,Adventure\r\n"
-                + "\r\n"
-                + "John Wick,JW123\r\n"
-                + "Action,Crime\r\n"
-                + "\r\n"
-                + "\r\n"
-                + "The Conjuring,TC133\r\n"
-                + "Horror,Thriller\r\n"
-                + "\r\n"
-                + "\r\n"
-                + "Iron Man,IM902\r\n"
-                + "Action,SciFi,Animation,Family\r\n"
-                + "\r\n"
-                + "\r\n"
-                + "Frozen,F314\r\n"
-                + "Animation,Family\r\n"
-                + "");
+        MovieFile.write("""
+                        Avatar,A156\r
+                        SciFi,Adventure\r
+                        \r
+                        John Wick,JW123\r
+                        Action,Crime\r
+                        \r
+                        \r
+                        The Conjuring,TC133\r
+                        Horror,Thriller\r
+                        \r
+                        \r
+                        Iron Man,IM902\r
+                        Action,SciFi,Animation,Family\r
+                        \r
+                        \r
+                        Frozen,F314\r
+                        Animation,Family\r
+                        """
+                );
 
 
-        UserFile.write("Ahmed Ali,123456789\r\n"
-                + "JW123,A567\r\n"
-                + "\r\n"
-                + "sara Mostafa,876543229\r\n"
-                + "TC489,IM902\r\n"
-                + "\r\n"
-                + "Omar Khaled,112233449\r\n"
-                + "F314\r\n"
-                + "\r\n"
-                + "Mona Youssef,998877669\r\n"
-                + "JW123,TC489,F314\r\n");
+        UserFile.write("""
+                Ahmed Ali,123456789\r
+                JW123,A567\r
+                \r
+                sara Mostafa,876543229\r
+                TC489,IM902\r
+                \r
+                Omar Khaled,112233449\r
+                F314\r
+                \r
+                Mona Youssef,998877669\r
+                JW123,TC489,F314\r
+                """);
         MovieFile.close();
         UserFile.close();
         List<Movies> moviesInput = fs.readMovies(films);
@@ -85,10 +88,10 @@ class MovieTest {
         fws.writeRecommendations(recommendFiles, usersInput, moviesInput, rm);
         List<String> lines = Files.readAllLines(Paths.get(recommendFiles));
 
-        assertEquals(lines.get(1), "John Wick,Iron Man");
-        assertEquals(lines.get(3), "Avatar,John Wick,Iron Man,Frozen");
-        assertEquals(lines.get(5), "Iron Man,Frozen");
-        assertEquals(lines.get(7), "John Wick,Iron Man,Frozen");
+        assertEquals("John Wick,Iron Man", lines.get(1));
+        assertEquals("Avatar,John Wick,Iron Man,Frozen", lines.get(3));
+        assertEquals("Iron Man,Frozen", lines.get(5));
+        assertEquals("John Wick,Iron Man,Frozen", lines.get(7));
 
 
 
@@ -100,34 +103,33 @@ class MovieTest {
     @Test
 
     void testMoviesNegativeScenario2DigitsId() throws Exception {
-        MovieFile.write("Avatar,A15\r\n"     //two digits id
-                + "SciFi,Adventure\r\n"
-                + "\r\n"
-                + "John Wick,JW123\r\n"
-                + "Action,Crime\r\n"
+        //two digits id
+        MovieFile.write("""
+                        Avatar,A15\r
+                        SciFi,Adventure\r
+                        \r
+                        John Wick,JW123\r
+                        Action,Crime\r
+                        The Conjuring,TC133\r
+                        Horror,Thriller\r
+                        Iron Man,IM902\r
+                        Action,SciFi,Animation,Family\r
+                        Frozen,F314\r
+                        Animation,Family\r
+                        """
+                );
 
 
-                + "The Conjuring,TC133\r\n"
-                + "Horror,Thriller\r\n"
-
-
-                + "Iron Man,IM902\r\n"
-                + "Action,SciFi,Animation,Family\r\n"
-
-
-                + "Frozen,F314\r\n"
-                + "Animation,Family\r\n"
-                + "");
-
-
-        UserFile.write("Ahmed Ali,12345678\r\n"
-                + "JW123,A567\r\n"
-                + "sara Mostafa,87654322\r\n"
-                + "TC489,IM902\r\n"
-                + "Omar Khaled,11223344\r\n"
-                + "F314\r\n"
-                + "Mona Youssef,99887766\r\n"
-                + "JW123,TC489,F314\r\n");
+        UserFile.write("""
+                Ahmed Ali,12345678\r
+                JW123,A567\r
+                sara Mostafa,87654322\r
+                TC489,IM902\r
+                Omar Khaled,11223344\r
+                F314\r
+                Mona Youssef,99887766\r
+                JW123,TC489,F314\r
+                """);
         MovieFile.flush();
         MovieFile.close();
         UserFile.flush();
@@ -154,8 +156,8 @@ class MovieTest {
 
         }
         List<String> lines = Files.readAllLines(Paths.get(recommendFiles));
-        assertEquals(lines.size(), 1);
-        assertEquals("ERROR: Movie Id letters A15 are wrong",lines.get(0));
+        assertEquals(1, lines.size());
+        assertEquals("ERROR: Movie Id letters A15 are wrong",lines.getFirst());
 
 
 
@@ -169,35 +171,33 @@ class MovieTest {
     @Test
 
     void testMoviesNegativeScenario4digitsId() throws Exception {
-        MovieFile.write("Avatar,A158\r\n"
-                + "SciFi,Adventure\r\n"
-
-                + "John Wick,JW123\r\n"
-                + "Action,Crime\r\n"
-
-
-                + "The Conjuring,TC1335\r\n"//4 digits id
-                + "Horror,Thriller\r\n"
-
-
-                + "Iron Man,IM902\r\n"
-                + "Action,SciFi,Animation,Family\r\n"
-
-
-                + "Frozen,F314\r\n"
-                + "Animation,Family\r\n"
-                + "");
+        //4 digits id
+        MovieFile.write("""
+                        Avatar,A158\r
+                        SciFi,Adventure\r
+                        John Wick,JW123\r
+                        Action,Crime\r
+                        The Conjuring,TC1335\r
+                        Horror,Thriller\r
+                        Iron Man,IM902\r
+                        Action,SciFi,Animation,Family\r
+                        Frozen,F314\r
+                        Animation,Family\r
+                        """
+                );
 
 
-        UserFile.write("Ahmed Ali,123456789\r\n"
-                + "JW123,A567\r\n"
-                + "sara Mostafa,876543229\r\n"
-                + "TC489,IM902\r\n"
-                + "Omar Khaled,112233449\r\n"
-                + "F314\r\n"
-                + "Mona Youssef,998877669\r\n"
-                + "JW123,TC489,F314\r\n"
-                + "");
+        UserFile.write("""
+                        Ahmed Ali,123456789\r
+                        JW123,A567\r
+                        sara Mostafa,876543229\r
+                        TC489,IM902\r
+                        Omar Khaled,112233449\r
+                        F314\r
+                        Mona Youssef,998877669\r
+                        JW123,TC489,F314\r
+                        """
+                );
         MovieFile.flush();
         MovieFile.close();
         UserFile.flush();
@@ -224,8 +224,8 @@ class MovieTest {
 
         }
         List<String> lines = Files.readAllLines(Paths.get(recommendFiles));
-        assertEquals(lines.size(), 1);
-        assertEquals("ERROR: Movie Id letters TC1335 are wrong",lines.get(0));
+        assertEquals(1, lines.size());
+        assertEquals("ERROR: Movie Id letters TC1335 are wrong",lines.getFirst());
 
 
 
@@ -238,27 +238,32 @@ class MovieTest {
     @Test
 
     void testMoviesNegativeScenarioNoComma() throws Exception {
-        MovieFile.write("Avatar,A158\r\n"
-                + "SciFi,Adventure\r\n"
-                + "John Wick,JW123\r\n"
-                + "Action,Crime\r\n"
-                + "The Conjuring,TC133\r\n"
-                + "Horror,Thriller\r\n"
-                + "Iron ManIM902\r\n"//removed the comma
-                + "Action,SciFi,Animation,Family\r\n"
-                + "Frozen,F314\r\n"
-                + "Animation,Family\r\n"
+        //removed the comma
+        MovieFile.write("""
+                        Avatar,A158\r
+                        SciFi,Adventure\r
+                        John Wick,JW123\r
+                        Action,Crime\r
+                        The Conjuring,TC133\r
+                        Horror,Thriller\r
+                        Iron ManIM902\r
+                        Action,SciFi,Animation,Family\r
+                        Frozen,F314\r
+                        Animation,Family\r
+                        """
                 );
 
 
-        UserFile.write("Ahmed Ali,123456789\r\n"
-                + "JW123,A567\r\n"
-                + "sara Mostafa,876543229\r\n"
-                + "TC489,IM902\r\n"
-                + "Omar Khaled,112233449\r\n"
-                + "F314\r\n"
-                + "Mona Youssef,998877669\r\n"
-                + "JW123,TC489,F314\r\n"
+        UserFile.write("""
+                        Ahmed Ali,123456789\r
+                        JW123,A567\r
+                        sara Mostafa,876543229\r
+                        TC489,IM902\r
+                        Omar Khaled,112233449\r
+                        F314\r
+                        Mona Youssef,998877669\r
+                        JW123,TC489,F314\r
+                        """
                 );
         MovieFile.flush();
         MovieFile.close();
@@ -283,8 +288,8 @@ class MovieTest {
 
         }
         List<String> lines = Files.readAllLines(Paths.get(recommendFiles));
-        assertEquals(lines.size(), 1);
-        assertEquals("Invalid movie line format",lines.get(0));//bug:it's not line 1  it's 7
+        assertEquals(1, lines.size());
+        assertEquals("Invalid movie line format",lines.getFirst());//bug:it's not line 1  it's 7
 
     }
 
@@ -292,28 +297,33 @@ class MovieTest {
     @Test
 
     void testMoviesNegativeScenarioNotUniqueMovieId() throws Exception {
-        MovieFile.write("Avatar,A158\r\n"
-                + "SciFi,Adventure\r\n"
-                + "John Wick,JW158\r\n"  //not unique id numbers
-                + "Action,Crime\r\n"
-                + "The Conjuring,TC133\r\n"
-                + "Horror,Thriller\r\n"
-                + "Iron Man,IM902\r\n"
-                + "Action,SciFi,Animation,Family\r\n"
-                + "Frozen,F314\r\n"
-                + "Animation,Family\r\n"
-                + "");
+        //not unique id numbers
+        MovieFile.write("""
+                        Avatar,A158\r
+                        SciFi,Adventure\r
+                        John Wick,JW158\r
+                        Action,Crime\r
+                        The Conjuring,TC133\r
+                        Horror,Thriller\r
+                        Iron Man,IM902\r
+                        Action,SciFi,Animation,Family\r
+                        Frozen,F314\r
+                        Animation,Family\r
+                        """
+                );
 
 
-        UserFile.write("Ahmed Ali,12345678\r\n"
-                + "JW123,A567\r\n"
-                + "sara Mostafa,87654322\r\n"
-                + "TC489,IM902\r\n"
-                + "Omar Khaled,11223344\r\n"
-                + "F314\r\n"
-                + "Mona Youssef,99887766\r\n"
-                + "JW123,TC489,F314\r\n"
-                + "");
+        UserFile.write("""
+                        Ahmed Ali,12345678\r
+                        JW123,A567\r
+                        sara Mostafa,87654322\r
+                        TC489,IM902\r
+                        Omar Khaled,11223344\r
+                        F314\r
+                        Mona Youssef,99887766\r
+                        JW123,TC489,F314\r
+                        """
+                );
         MovieFile.flush();
         MovieFile.close();
         UserFile.flush();
@@ -337,7 +347,7 @@ class MovieTest {
 
         }
         List<String> lines = Files.readAllLines(Paths.get(recommendFiles));
-        assertEquals(lines.size(), 1);
+        assertEquals(1, lines.size());
         assertEquals("ERROR: Movie Id numbers JW158 aren’t unique",lines.get(0));//bug:it's not line 1  it's 6
 
 
@@ -347,28 +357,32 @@ class MovieTest {
     @Test
 
     void testMoviesNegativeScenarioWrongMovieIDLetters() throws Exception {
-        MovieFile.write("Avatar,A158\r\n"
-                + "SciFi,Adventure\r\n"
-                + "John Wick,PW151\r\n"  //wrong id letters
-                + "Action,Crime\r\n"
-                + "The Conjuring,TC133\r\n"
-                + "Horror,Thriller\r\n"
-                + "Iron Man,IM902\r\n"
-                + "Action,SciFi,Animation,Family\r\n"
-                + "Frozen,F314\r\n"
-                + "Animation,Family\r\n"
-                + "");
+        //wrong id letters
+        MovieFile.write("""
+                Avatar,A158\r
+                SciFi,Adventure\r
+                John Wick,PW151\r
+                Action,Crime\r
+                The Conjuring,TC133\r
+                Horror,Thriller\r
+                Iron Man,IM902\r
+                Action,SciFi,Animation,Family\r
+                Frozen,F314\r
+                Animation,Family\r
+                """);
 
 
-        UserFile.write("Ahmed Ali,12345678\r\n"
-                + "JW123,A567\r\n"
-                + "sara Mostafa,87654322\r\n"
-                + "TC489,IM902\r\n"
-                + "Omar Khaled,11223344\r\n"
-                + "F314\r\n"
-                + "Mona Youssef,99887766\r\n"
-                + "JW123,TC489,F314\r\n"
-                + "");
+        UserFile.write("""
+                        Ahmed Ali,12345678\r
+                        JW123,A567\r
+                        sara Mostafa,87654322\r
+                        TC489,IM902\r
+                        Omar Khaled,11223344\r
+                        F314\r
+                        Mona Youssef,99887766\r
+                        JW123,TC489,F314\r
+                        """
+                );
         MovieFile.flush();
         MovieFile.close();
         UserFile.flush();
@@ -395,7 +409,7 @@ class MovieTest {
 
         }
         List<String> lines = Files.readAllLines(Paths.get(recommendFiles));
-        assertEquals(lines.size(), 1);
+        assertEquals(1, lines.size());
         assertEquals("ERROR: Movie Id letters PW151 are wrong",lines.get(0));//bug:it's not line 1  it's 6
 
 
@@ -406,28 +420,33 @@ class MovieTest {
     @Test
 
     void testMoviesNegativeScenarioWrongTitle() throws Exception {
-        MovieFile.write("Avatar,A158\r\n"
-                + "SciFi,Adventure\r\n"
-                + "john wick,JW151\r\n"  //wrong movie title format
-                + "Action,Crime\r\n"
-                + "The Conjuring,TC133\r\n"
-                + "Horror,Thriller\r\n"
-                + "Iron Man,IM902\r\n"
-                + "Action,SciFi,Animation,Family\r\n"
-                + "Frozen,F314\r\n"
-                + "Animation,Family\r\n"
-                + "");
+        //wrong movie title format
+        MovieFile.write("""
+                Avatar,A158\r
+                SciFi,Adventure\r
+                john wick,JW151\r
+                Action,Crime\r
+                The Conjuring,TC133\r
+                Horror,Thriller\r
+                Iron Man,IM902\r
+                Action,SciFi,Animation,Family\r
+                Frozen,F314\r
+                Animation,Family\r
+                """
+               );
 
 
-        UserFile.write("Ahmed Ali,12345678\r\n"
-                + "JW123,A567\r\n"
-                + "sara Mostafa,87654322\r\n"
-                + "TC489,IM902\r\n"
-                + "Omar Khaled,11223344\r\n"
-                + "F314\r\n"
-                + "Mona Youssef,99887766\r\n"
-                + "JW123,TC489,F314\r\n"
-                + "");
+        UserFile.write("""
+                        Ahmed Ali,12345678\r
+                        JW123,A567\r
+                        sara Mostafa,87654322\r
+                        TC489,IM902\r
+                        Omar Khaled,11223344\r
+                        F314\r
+                        Mona Youssef,99887766\r
+                        JW123,TC489,F314\r
+                        """
+                );
         MovieFile.flush();
         MovieFile.close();
         UserFile.flush();
@@ -454,7 +473,7 @@ class MovieTest {
 
         }
         List<String> lines = Files.readAllLines(Paths.get(recommendFiles));
-        assertEquals(lines.size(), 1);
+        assertEquals(1, lines.size());
         assertEquals("ERROR: Movie Title john wick is wrong",lines.get(0));//bug:it's not line 1  it's 6
 
 
